Sat Jun 15 04:23:36 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* movemail.c: Initialize auth_context to NULL.

Fri Jul 7 15:44:13 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove all explicit library handling and LDFLAGS.
	* configure.in - add KRB5_LIBRARIES.

Tue Jun 20 13:09:51 1995  Tom Yu  (tlyu@dragons-lair)

	* movemail.c: USE_STRING_H -> HAVE_STRING_H; fix HAVE_STLIB_H to
	dtrt.
	* configure.in: added missing tests for string.h and stdlib.h

Thu Jun 15 17:37:08 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
	* configure.in - Add shared library usage check.

Sat Jun 10 22:57:39 1995  Tom Yu  (tlyu@dragons-lair)

	* movemail.c: krb5_auth_context redefinitions

Fri Jun  9 18:27:12 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Fri Mar 31 21:24:48 1995  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in, movemail.c: Use configure to see if unistd.h needs
		to be included.  Remove leftover hair from emacs config.

Mon Mar 27 09:17:06 1995 Chris Provenzano  (proven@mit.edu)

	* movemail.c: Fixups to get movemail to compile.

Thu Mar  2 12:28:04 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 11:56:05 1995  Theodore Y. Ts'o  <tytso@dcl>

	* movemail.c: Add proper #ifdef's to #include the appropriate
		system header files.

	* configure.in: Replace check for -lsocket and -lnsl with
	        WITH_NETLIB check.

Tue Feb 28 01:53:27 1995  John Gilmore  (gnu at toad.com)

	* movemail.c:  Avoid <krb5/...> includes.

Tue Feb 14 15:30:55 1995 Chris Provenzano  (proven@mit.edu)

        * movemail.c Call krb5_sendauth() with new calling convention.

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines
