@@ -1,3 +1,10 @@
+Thu Nov  7 15:21:13 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>
+
+	* movemail.c (main): Check the error return from
+ 		krb5_init_context(), and print an error message if
+ 		necessary.  
+		Cleaned up gcc -Wall warnings.
+
 Sat Jun 15 04:23:36 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>
 
 	* movemail.c: Initialize auth_context to NULL.
